<resources>
    <string name="app_name">Monster App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="create_account">Create account</string>
    <string name="create_password">create password</string>
    <string name="create_username">create username</string>
    <string name="new_user">New user?</string>
    <string name="login">Login</string>
    <string name="existing_user">Existing user?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>