<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.ProfileFragment"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_signed_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/helloText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello, guest!"
            android:textColor="#292929"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999"
            app:textAllCaps="false" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="138dp"
            android:layout_height="122dp"
            android:src="@drawable/profileicon_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helloText"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="guest"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.050000012" />

        <Button
            android:id="@+id/refer_a_friend_button"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="Refer a friend"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            app:layout_constraintVertical_bias="0.100000024" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="Logout"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refer_a_friend_button"
            app:layout_constraintVertical_bias="0.04000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_signed_out"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="-31dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:text="@string/existing_user"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account_button"
            app:layout_constraintVertical_bias="0.060000002" />

        <Button
            android:id="@+id/continue_as_guest_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/continue_as_guest"
            android:textAllCaps="false"
            android:textColor="#00b4c4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.98" />

        <Button
            android:id="@+id/create_account_button"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.050000012" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.42000002" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.060000002" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_log_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="96dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="311dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="  password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputField1"
            app:layout_constraintVertical_bias="0.06999999" />

        <Button
            android:id="@+id/login_screen_login_button"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="Login"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
            app:layout_constraintVertical_bias="0.110000014" />

        <Button
            android:id="@+id/continue_as_guest_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/continue_as_guest"
            android:textAllCaps="false"
            android:textColor="#00b4c4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/inputField1"
            android:layout_width="311dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="  username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.38" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_create_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <EditText
            android:id="@+id/inputField2"
            android:layout_width="311dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="  create username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="311dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="  create password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.62" />

        <Button
            android:id="@+id/create_screen_create_account_button"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/continue_as_guest_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.110000014" />

        <Button
            android:id="@+id/continue_as_guest_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/continue_as_guest"
            android:textAllCaps="false"
            android:textColor="#00b4c4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>